--- a/cw-admin/test.html
+++ b/cw-admin/test.html
@@ -1,3 +1,24 @@
+<!--
+/* ___           __ _           _ __    __     _     
+  / __\ __ __ _ / _| |_ ___  __| / / /\ \ \___| |__  
+ / / | '__/ _` | |_| __/ _ \/ _` \ \/  \/ / _ \ '_ \ 
+/ /__| | | (_| |  _| ||  __/ (_| |\  /\  /  __/ |_) |
+\____/_|  \__,_|_|  \__\___|\__,_| \/  \/ \___|_.__/ 
+
+		-[ Created by ©Nomsoft
+		  `-[ Original core by Anthony (Aka. CraftedDev)
+
+				-CraftedWeb Generation II-                  
+			 __                           __ _   							   
+		  /\ \ \___  _ __ ___  ___  ___  / _| |_ 							   
+		 /  \/ / _ \| '_ ` _ \/ __|/ _ \| |_| __|							   
+		/ /\  / (_) | | | | | \__ \ (_) |  _| |_ 							   
+		\_\ \/ \___/|_| |_| |_|___/\___/|_|  \__|	- www.Nomsoftware.com -	   
+                  The policy of Nomsoftware states: Releasing our software   
+                  or any other files are protected. You cannot re-release    
+                  anywhere unless you were given permission.                 
+                  © Nomsoftware 'Nomsoft' 2011-2012. All rights reserved.  */
+-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cs" lang="cs">
   <head>
@@ -5,7 +26,7 @@
     <meta name='robots' content='all, follow' />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <title>Great admin</title>   
+    <title>CraftedWeb ACP</title>   
     <link href="public/css/default.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="public/css/gray.css" rel="stylesheet" type="text/css" media="screen" /> <!-- color skin: blue / red / green / dark -->
     <link href="public/css/datePicker.css" rel="stylesheet" type="text/css" media="screen" />
@@ -49,7 +70,7 @@
     <div id="header"> 
       <!-- #logo --> 
       <div id="logo">
-        <a href="index.html" title="Go to Homepage"><span>Great Admin</span></a>
+        <a href="index.html" title="Go to Homepage"><span>CraftedWeb ACP</span></a>
       </div>
       <!-- /#logo -->
       <!-- #user -->                        
@@ -425,7 +446,7 @@
     <!-- /#sidebar -->
     <!-- #footer -->
     <div id="footer">
-      <p>© 2010 Great Admin | <a href="#main">Top</a></p>
+      <p>© 2011-2012 <a href="http://forums.nomcosftware.com">Nomsoft</a> | <a href="#main">Top</a></p>
     </div>
     <!-- /#footer -->
 
