Update: The install page's template has been updated along with it's own CSS. (To be updated when Gen II releases)
Update: New CSS menu design that Generation II will be using has been added to Gen I.

--- a/styles/default/template.html
+++ b/styles/default/template.html
@@ -12,16 +12,18 @@
 -->
 <div id="overlay"></div>  
 <div id="wrapper">
-<div id="menu" class="floating-menu">
-	{menu}
-</div>
 
-<br /><br /><br />
 <div id="logo">
 	<a href="index.php" title="Home">
 	<center><img src="styles/global/images/logo.png" alt="Logo" style="border:none" /></center></a>
 </div>
+<br /><br /><br />
 
+<div class="cssmenu">
+	<ul>
+		{menu}
+	</ul>
+</div>
 <div id="leftcontent">
 	{login}
 	{account}
